--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "mysql2": "^3.9.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "@nestjs/mapped-types": "^2.1.0",
-    "mysql2": "^3.9.4",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -44,6 +44,8 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
